--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,11 @@
-[workspace]
-members = [
-    'ui_druid'
-]
+[package]
+name = "hwt"
+version = "0.1.0"
+edition = "2021"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[dependencies]
+druid = "0.7.0"
+
+log = "0.4.14"
