--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "hwt_ui"
 version = "0.1.0"
 edition = "2021"
+authors = ["Dmitriy Pleshevskiy <dmitriy@ideascup.me>"]
+description = "healthy workaholic timer – A tool that keeps you from breaking your health by working all day."
+readme = "./readme.md"
+repository = "https://github.com/pleshevskiy/hwt"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
