--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,8 @@ name = "hwt"
 path = "src/main.rs"
 
 [dependencies]
-druid = "0.7.0"
-
 log = "0.4.14"
+druid = "0.7.0"
 rodio = "0.15.0"
+serde = { version = "1.0.136", features = ["derive"] }
+toml = "0.5.8"
