ci: add deps for ubuntu

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
-/target
-Cargo.lock
+/*
+
+!/.github
+!/resources
+!/src
+
+!/.dockerignore
+!/.gitignore
+
+!/Cargo.toml
+!/makefile
+
+!/confgig.example.toml
+!/*.md
+
