--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,7 +8,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os:
+          - ubuntu-latest
+#         - macos-latest
+#         - windows-latest
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -21,20 +24,24 @@ jobs:
           profile: minimal
           components: clippy
 
+      - name: Install deps
+        if: matrix.os == 'ubuntu-latest'
+        run: sudo apt install -y build-essential pkg-config libasound2-dev libglib2.0-dev libcairo2-dev libatk1.0-dev libsdl-pango-dev libgdk-pixbuf2.0-dev libgtk-3-dev
+
       - name: Build
         run: make build
-
-      - name: Build Release Mac
-        if: matrix.os == 'macos-latest'
-        run: make release-mac
 
       - name: Build Release Linux
         if: matrix.os == 'ubuntu-latest'
         run: make release-linux
 
-      - name: Build Release Win
-        if: matrix.os == 'windows-latest'
-        run: make release-win
+#     - name: Build Release Mac
+#       if: matrix.os == 'macos-latest'
+#       run: make release-mac
+
+#     - name: Build Release Win
+#       if: matrix.os == 'windows-latest'
+#       run: make release-win
 
       - name: Release
         uses: softprops/action-gh-release@v1
