--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,13 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
-        rust: [stable, nightly]
+        os:
+          - ubuntu-latest
+#         - windows-latest
+#         - macos-latest
+        rust: 
+          - stable
+          - nightly
 
     steps:
       - uses: actions/checkout@v2
@@ -32,6 +37,10 @@ jobs:
           default: true
           profile: minimal
           components: clippy
+
+      - name: Install deps
+        if: matrix.os == 'ubuntu-latest'
+        run: sudo apt install -y build-essential pkg-config libasound2-dev libglib2.0-dev libcairo2-dev libatk1.0-dev libsdl-pango-dev libgdk-pixbuf2.0-dev libgtk-3-dev
 
       - name: Build Debug
         run: |
