--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,18 @@ jobs:
 
       - name: Install deps
         if: matrix.os == 'ubuntu-latest'
-        run: sudo apt install -y build-essential pkg-config libasound2-dev libglib2.0-dev libcairo2-dev libatk1.0-dev libsdl-pango-dev libgdk-pixbuf2.0-dev libgtk-3-dev
+        run: |
+          sudo apt update
+          sudo apt install -y \
+            build-essential \
+            pkg-config \
+            libasound2-dev \
+            libglib2.0-dev \
+            libcairo2-dev \
+            libatk1.0-dev \
+            libsdl-pango-dev \
+            libgdk-pixbuf2.0-dev \
+            libgtk-3-dev
 
       - name: Build Debug
         run: |
